# fable

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHIVE.md  CONFIGURATION.md  CONTEXT.md  FABLE.md  PROGRESS.md  README.md  SERVING.yaml  dvc.yaml  params.yaml  pyproject.toml  pyrightconfig.json
.dvc/: config
app/: App.tsx  app.json  package-lock.json  package.json
app/src/: analytics.ts  demo.ts  history.ts  inference.ts  theme.ts
benchmarks/: README.md  results.csv
benchmarks/scripts/: scan_block_count_quartile_windows.py  write_evaluation_suite_from_window_csv.py
configs/: baseline.yaml
configs/pilots/: ethereum-36s.yaml
docs/adr/: 0001-root-id-consumer-workflows.md  0003-representation-seam-retained.md  0004-compiler-materialization-existing-root-vocabulary.md
docs/agents/: domain.md  issue-tracker.md  (+1 more)
experiments/: context_history.py  feature_ablation.py  k5_fee_conditions.py
tests/: __init__.py  artifact_helpers.py  catalog_helpers.py  conftest.py  dataset_helpers.py  root_handle_helpers.py  support.py  test_acquire.py  test_acquisition.py  test_api.py  test_artifacts.py  test_awake.py  test_block_contract.py  test_cli.py  test_cli_help.py  test_config.py  test_config_cli.py  test_console.py  test_cryo.py  test_data.py  test_datasets.py  test_enrich.py  test_io.py  test_modeling.py  test_modeling_execution.py  test_pipeline.py  test_providers.py  test_raw_validation.py  test_rpc.py  test_rpc_providers.py  test_serving.py  test_study.py  test_training.py  test_training_consistency.py  test_training_progress.py  test_tuning.py  test_workflows.py
(+751 files in other folders)
