[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spice"
version = "0.1.0"
description = "Practical reproduction of the SPICE temporal module baseline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Edoardo" }
]
dependencies = [
  "numpy>=1.26",
  "polars>=1.5",
  "PyYAML>=6.0",
  "typer>=0.12",
  "torch>=2.5",
  "pydantic>=2.12",
  "pydantic-settings>=2.13",
  "rich>=14.3",
  "httpx>=0.28",
  "scikit-learn>=1.8",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1",
  "pytest>=8.3",
  "ruff>=0.6",
]

[project.scripts]
spice = "spice.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/spice"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
